# gametest1

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
inc/: DuplicatingPoint.h  Point.h  ReflectingPoint.h  TransformingPoint.h  Types.h
src/: DuplicatingPoint.cpp  Point.cpp  ReflectingPoint.cpp  TransformingPoint.cpp  main.cpp
